--- a/logistic_regression_task1.ipynb
+++ b/logistic_regression_task1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -107,6 +107,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "colab": {
@@ -121,7 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f95e2b2448>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x23e2d5a8d48>"
       ]
      },
      "execution_count": 7,
@@ -149,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -164,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +244,7 @@
        "4           5.0          3.6  setosa"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +264,7 @@
        "100"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -282,12 +289,151 @@
       "sepal_width     100 non-null float64\n",
       "species         100 non-null object\n",
       "dtypes: float64(2), object(1)\n",
-      "memory usage: 8.1+ KB\n"
+      "memory usage: 3.1+ KB\n"
      ]
     }
    ],
    "source": [
     "iris.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iris.replace('setosa',+1,inplace=True)\n",
+    "iris.replace('versicolor',-1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal_length</th>\n",
+       "      <th>sepal_width</th>\n",
+       "      <th>species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>95</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>96</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>97</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>98</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>99</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    sepal_length  sepal_width  species\n",
+       "0            5.1          3.5        1\n",
+       "1            4.9          3.0        1\n",
+       "2            4.7          3.2        1\n",
+       "3            4.6          3.1        1\n",
+       "4            5.0          3.6        1\n",
+       "..           ...          ...      ...\n",
+       "95           5.7          3.0       -1\n",
+       "96           5.7          2.9       -1\n",
+       "97           6.2          2.9       -1\n",
+       "98           5.1          2.5       -1\n",
+       "99           5.7          2.8       -1\n",
+       "\n",
+       "[100 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris"
    ]
   },
   {
@@ -299,14 +445,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "515.8939774798694\n"
+      "54.51766686130284\n"
      ]
     }
    ],
@@ -315,24 +461,30 @@
     "#y=3x+3\n",
     "#3x-y+3=0\n",
     "#A=3,B=-1,C=3\n",
-    "label=[]\n",
+    "\n",
     "distance=[]\n",
     "for i in range(100):\n",
-    "    d=abs((3*iris['sepal_length'].iloc[i])+((-1)*iris['sepal_width'].iloc[i]+3))/(math.sqrt((3*3)+(-1)*(-1)))\n",
-    "    distance.append(d)\n",
-    "    if d>0:\n",
-    "        label.append(+1)\n",
-    "    elif d<0:\n",
-    "        label.append(-1)\n",
+    "    d=(abs((3*iris['sepal_length'].iloc[i])+((-1)*iris['sepal_width'].iloc[i]+3))/(math.sqrt((3*3)+(-1)*(-1))))\n",
+    "    judge=iris['sepal_width'].iloc[i]-((3*iris['sepal_length'].iloc[i])+3)\n",
+    "    if judge>0:\n",
+    "        d_new=d\n",
     "    else:\n",
-    "        label.append(np.nan)\n",
+    "        d_new=(-1)*d       \n",
+    "    distance.append(d_new)\n",
     "        \n",
     "final1=[]        \n",
     "for i in range(100):\n",
-    "    final1.append(label[i]*distance[i])\n",
+    "    final1.append(iris['species'].iloc[i]*distance[i])\n",
     "    \n",
     "print(np.sum(final1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -343,37 +495,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "479.6299151830102\n"
+      "50.22166403517049\n"
      ]
     }
    ],
    "source": [
     "#for line2\n",
     "#y=8x-2\n",
-    "#8x-y-2\n",
+    "#8x-y-2=0\n",
     "#A=8,B=-1,C=-2\n",
-    "label=[]\n",
+    "\n",
     "distance=[]\n",
     "for i in range(100):\n",
     "    d=abs(8*iris['sepal_length'].iloc[i]+(-1)*iris['sepal_width'].iloc[i]+(-2))/(math.sqrt((8*8)+(-1)*(-1)))\n",
-    "    distance.append(d)\n",
-    "    if d>0:\n",
-    "        label.append(+1)\n",
-    "    elif d<0:\n",
-    "        label.append(-1)\n",
+    "    judge=iris['sepal_width'].iloc[i]-((3*iris['sepal_length'].iloc[i])+3)\n",
+    "    if judge>0:\n",
+    "        d_new=d\n",
     "    else:\n",
-    "        label.append(np.nan)\n",
+    "        d_new=(-1)*d\n",
+    "        \n",
+    "    distance.append(d_new)\n",
     "        \n",
     "final2=[]        \n",
     "for i in range(100):\n",
-    "    final2.append(label[i]*distance[i])\n",
+    "    final2.append(iris['species'].iloc[i]*distance[i])\n",
     "    \n",
     "print(np.sum(final2))"
    ]
