--- a/logistic_regression_task1.ipynb
+++ b/logistic_regression_task1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -128,10 +128,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x23e2d5a8d48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x20c34234388>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4           5.0          3.6  setosa"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "100"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -464,13 +464,13 @@
     "\n",
     "distance=[]\n",
     "for i in range(100):\n",
-    "    d=(abs((3*iris['sepal_length'].iloc[i])+((-1)*iris['sepal_width'].iloc[i]+3))/(math.sqrt((3*3)+(-1)*(-1))))\n",
-    "    judge=iris['sepal_width'].iloc[i]-((3*iris['sepal_length'].iloc[i])+3)\n",
-    "    if judge>0:\n",
-    "        d_new=d\n",
+    "    d1=(abs((3*iris['sepal_length'].iloc[i])+((-1)*iris['sepal_width'].iloc[i]+3))/(math.sqrt((3*3)+(-1)*(-1))))\n",
+    "    judge1=iris['sepal_width'].iloc[i]-((3*iris['sepal_length'].iloc[i])+3)\n",
+    "    if judge1>0:\n",
+    "        d_new1=d1\n",
     "    else:\n",
-    "        d_new=(-1)*d       \n",
-    "    distance.append(d_new)\n",
+    "        d_new1=(-1)*d1      \n",
+    "    distance.append(d_new1)\n",
     "        \n",
     "final1=[]        \n",
     "for i in range(100):\n",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -514,14 +514,14 @@
     "\n",
     "distance=[]\n",
     "for i in range(100):\n",
-    "    d=abs(8*iris['sepal_length'].iloc[i]+(-1)*iris['sepal_width'].iloc[i]+(-2))/(math.sqrt((8*8)+(-1)*(-1)))\n",
-    "    judge=iris['sepal_width'].iloc[i]-((3*iris['sepal_length'].iloc[i])+3)\n",
-    "    if judge>0:\n",
-    "        d_new=d\n",
+    "    d2=abs(8*iris['sepal_length'].iloc[i]+(-1)*iris['sepal_width'].iloc[i]+(-2))/(math.sqrt((8*8)+(-1)*(-1)))\n",
+    "    judge2=iris['sepal_width'].iloc[i]-((8*iris['sepal_length'].iloc[i])+(-2))\n",
+    "    if judge2>0:\n",
+    "        d_new2=d2\n",
     "    else:\n",
-    "        d_new=(-1)*d\n",
+    "        d_new2=(-1)*d2\n",
     "        \n",
-    "    distance.append(d_new)\n",
+    "    distance.append(d_new2)\n",
     "        \n",
     "final2=[]        \n",
     "for i in range(100):\n",
